--- a/src/index.css
+++ b/src/index.css
@@ -95,6 +95,7 @@ html {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 html.lenis, html.lenis body {
